--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mysql": "^2.15.0",
     "rimraf": "^2.6.2",
