get people on Basecamp

--- a/credentials.js.dist
+++ b/credentials.js.dist
@@ -1,7 +1,14 @@
 export default ({
   mysql: {
-    user: 'MYSQLUSER',
-    password: 'MYSQLPASSWORD',
-    host: 'MYSQLHOST',
+    user: 'MYSQL_USER',
+    password: 'MYSQL_PASSWORD',
+    host: 'MYSQL_HOST',
+  },
+  basecamp: {
+    refreshToken: 'BASECAMP_REFRESH_TOKEN',
+    clientId: 'BASECAMP_CLIENT_ID',
+    redirectUri: 'BASECAMP_REDIRECT_URI',
+    clientSecret: 'BASECAMP_CLIENT_SECRET',
+    accountId: 'BASECAMP_ACCOUNT_ID',
   }
 });
