--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mysql": "^2.15.0",
+    "node-fetch": "^2.1.2",
     "rimraf": "^2.6.2",
     "validator": "^10.4.0"
   }
