--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^8.2.5",
     "babel-preset-es2015": "^6.24.1",
+    "eslint": "^5.0.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mysql": "^2.15.0",
